<resources>
    <string name="app_name">LRT Jakarta</string>
    <string name="toolbar_name">LRT Jakarta</string>
    <string name="slogan">moving people, connecting communities</string>
    <string name="menu_beranda">Beranda</string>
    <string name="menu_rute">Rute</string>
    <string name="menu_stasiun">Stasiun</string>
    <string name="menu_jadwal">Jadwal</string>
    <string name="menu_tentang">Tentang Kami</string>
    <string name="menu_hubungi">Hubungi Kami</string>
    <string name="informasi">Informasi</string>
    <string name="txt_berita">Berita</string>
    <string name="txt_promosi">Promosi</string>

    <string name="btn_beritalain">Lainnya</string>

    <string name="navigation_open">Open Navigation drawer</string>
    <string name="navigation_close">Close Navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_banner">Banner Promosi</string>

    <!--    BERITA-->
    <string name="berita">Berita</string>
    <string name="judul_berita1">Kementerian PPPA-DKI Luncurkan Pusat Panggilan CARLA</string>
    <string name="link_berita1">https://www.lrtjakarta.co.id/kementerian_pppadki_luncurkan_pusat_panggilan_carla_berita567.html</string>

    <string name="judul_berita2">LRT Jakarta Canangkan Komitmen Transportasi Ramah Perempuan dan Anak</string>
    <string name="link_berita2">https://www.lrtjakarta.co.id/lrt_jakarta_canangkan_komitmen_transportasi_ramah_perempuan_dan_anak_berita568.html</string>

    <string name="judul_berita3">Kementerian PPPA Apresiasi DKI Wujudkan Kelurahan Ramah Perempuan</string>
    <string name="link_berita3">https://www.lrtjakarta.co.id/kementerian_pppa_apresiasi_dki_wujudkan_kelurahan_ramah_perempuan_berita569.html</string>

    <string name="judul_berita4">Pembangunan LRT Jakarta Fase 2 Kelapa Gading-JIS Segera Diwujudkan</string>
    <string name="link_berita4">https://www.lrtjakarta.co.id/pembangunan_lrt_jakarta_fase_kelapa_gadingjis_segera_diwujudkan_berita565.html</string>

    <string name="btn_baca">BACA</string>

    <string name="promosi">Promosi</string>
    <string name="link_promosi1">https://www.instagram.com/p/CkdTK2QpHEE/</string>
    <string name="link_promosi2">https://www.instagram.com/p/CkUqzG1pToO/</string>
    <string name="link_promosi3">https://www.instagram.com/p/CipdDolpLRK/</string>
    <string name="link_promosi4">https://www.instagram.com/p/CkaqXpUJr6u/</string>

    <!--    RUTE-->
    <string name="rute">Rute Perjalanan LRT Jakarta</string>
    <string name="txt_rute">Pegangsaan - Velodrome</string>
    <string name="txt_rute2">Velodrome - Pegangsaan</string>

    <!--    STASIUN-->
    <string name="judul_stasiun">Judul Stasiun</string>
    <string name="alamat_stasiun">Alamat Stasiun</string>
    <string name="peta">Lihat Peta</string>

    <string name="judul_stasiun1">Stasiun Pegangsaan Dua</string>
    <string name="alamat_stasiun1">Jalan Gading Grande, Pegangsaan Dua, Kec. Kelapa Gading, Kota Jakarta Utara</string>

    <string name="judul_stasiun2">Stasiun Boulevard Utara</string>
    <string name="alamat_stasiun2">Jalan Boulevard Raya</string>

    <string name="judul_stasiun3">Stasiun Boulevard Selatan</string>
    <string name="alamat_stasiun3">Jalan Boulevard Raya</string>

    <string name="judul_stasiun4">Stasiun Pulomas</string>
    <string name="alamat_stasiun4">Jalan Kayu Putih Raya, RT.9/RW.8, Pulo Gadung, Kec. Pulo Gadung, Kota Jakarta Timur</string>

    <string name="judul_stasiun5">Stasiun Equetrian</string>
    <string name="alamat_stasiun5">Jl. Kayu Putih Raya No.9, RT.9/RW.7, Pulo Gadung, Kec. Pulo Gadung, Kota Jakarta Timur</string>

    <string name="judul_stasiun6">Stasiun Velod rome</string>
    <string name="alamat_stasiun6">Jalan Pemuda</string>

    <!--    JADWAL-->
    <string name="jadwal">Jadwal Keberangkatan</string>
    <string name="jadwal1">Stasiun Pegangsaan Dua - Stasiun Velodrome</string>
    <string name="jadwal2">Stasiun Velodrome - Stasiun Pegangsaan Dua</string>

    <!--    TENTANG-->
    <string name="visi">VISI</string>
    <string name="txt_visi">Menjadi Solusi Mobilitas Publik Terbaik di Indonesia</string>

    <string name="misi">MISI</string>
    <string name="nomor1">1.</string>
    <string name="nomor2">2.</string>
    <string name="nomor3">3.</string>
    <string name="misi1">Menyediakan layanan transportasi publik warga Jakarta yang aman dan nyaman</string>
    <string name="misi2">Mengembangkan jaringan transportasi publik yang modern dan terintegrasi</string>
    <string name="misi3">Membangun reputasi perusahaan dengan pengembangan sumber daya manusia yang LRTJ</string>

    <string name="nilai">NILAI-NILAI PERUSAHAAN</string>

    <string name="nilai1">LINCAH (Agility)</string>
    <string name="txt_nilai1">Competent, Innovative, Modern, Passion, Emotional Inteligence (EQ)</string>

    <string name="nilai2">RAMAH (Service)</string>
    <string name="txt_nilai2">Alert, Simple, Sincere, Hospitable</string>

    <string name="nilai3">TERPERCAYA (Reliability)</string>
    <string name="txt_nilai3">Committed, Supportive</string>

    <string name="nilai4">JUJUR (Integrity)</string>
    <string name="txt_nilai4">Compliance, Trusted</string>

    <string name="logo">FILOSOFI LOGO</string>
    <string name="filosofi1">Elemen logo membentuk 3 garis yang secara keseluruhan merupakan representasi bentuk kereta api menggambarkan LRT Jakarta yang bergerak maju dan progresif di bidang perkeretaapian.</string>
    <string name="filosofi2">Warna merah terinspirasi oleh Perusahaan Holding Jakpro dengan warna Dominan Merah sebagai corporate color nya dan mencerminkan keuletan, ketegasan serta keberanian dalam menghadapi berbagai macam kesulitan.</string>
    <string name="filosofi3">Warna emas menunjukan prestasi, kesuksesan, kemewahan, kemenangan dan kemakmuran.</string>

<!--    HUBUNGI KAMI-->
    <string name="bantuan">Kontak Kami</string>
    <string name="facebook">Facebook</string>
    <string name="link_facebook">https://www.facebook.com/lrtjkt/</string>

    <string name="twitter">Twitter</string>
    <string name="link_twitter">https://twitter.com/lrtjkt?lang=en</string>

    <string name="instagram">Instagram</string>
    <string name="link_instagram">https://www.instagram.com/lrtjkt/</string>

    <string name="telepon">Call Center</string>


</resources>