<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--    GRUP MENU 1-->
    <group android:checkableBehavior="single">

        <item android:id="@+id/menu_beranda"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_beranda"/>

        <item android:id="@+id/menu_rute"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/menu_rute" />

        <item android:id="@+id/menu_jadwal"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            android:title="@string/menu_jadwal" />

    </group>

    <!--    GRUP MENU 2-->
    <group android:checkableBehavior="single">

        <item android:title="@string/informasi">

            <menu>

                <item android:id="@+id/menu_tentang"
                    android:icon="@drawable/ic_baseline_info_24"
                    android:title="@string/menu_tentang" />

                <item android:id="@+id/menu_hubungi"
                    android:icon="@drawable/ic_baseline_contact_support_24"
                    android:title="@string/menu_hubungi" />

            </menu>

        </item>


    </group>
</menu>