<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TentangFragment"
    android:overScrollMode="never">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Visi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/visi"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:background="@color/toolbar_color"/>

        <TextView
            android:id="@+id/txt_visi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:paddingVertical="12dp"
            android:layout_below="@id/Visi"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:text="@string/txt_visi"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/Misi"
            android:paddingVertical="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_visi"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/misi"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:background="@color/toolbar_color"/>

      <LinearLayout
          android:id="@+id/txt_misi"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/Misi"
          android:layout_marginHorizontal="16dp"
          android:layout_marginVertical="12dp"
          android:orientation="vertical">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

              <TextView
                  android:layout_height="wrap_content"
                  android:layout_width="12dp"
                  android:fontFamily="@font/poppins_light"
                  android:justificationMode="inter_word"
                  android:text="@string/nomor1"
                  android:textColor="@color/black"
                  android:textSize="14sp" />

              <TextView
                  android:layout_height="wrap_content"
                  android:layout_width="match_parent"
                  android:fontFamily="@font/poppins_light"
                  android:justificationMode="inter_word"
                  android:text="@string/misi1"
                  android:textColor="@color/black"
                  android:textSize="14sp" />
          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

              <TextView
                  android:layout_height="wrap_content"
                  android:layout_width="12dp"
                  android:fontFamily="@font/poppins_light"
                  android:justificationMode="inter_word"
                  android:text="@string/nomor2"
                  android:textColor="@color/black"
                  android:textSize="14sp" />

              <TextView
                  android:layout_height="wrap_content"
                  android:layout_width="match_parent"
                  android:fontFamily="@font/poppins_light"
                  android:justificationMode="inter_word"
                  android:text="@string/misi2"
                  android:textColor="@color/black"
                  android:textSize="14sp" />
          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

              <TextView
                  android:layout_height="wrap_content"
                  android:layout_width="12dp"
                  android:fontFamily="@font/poppins_light"
                  android:justificationMode="inter_word"
                  android:text="@string/nomor3"
                  android:textColor="@color/black"
                  android:textSize="14sp" />

              <TextView
                  android:layout_height="wrap_content"
                  android:layout_width="match_parent"
                  android:fontFamily="@font/poppins_light"
                  android:justificationMode="inter_word"
                  android:text="@string/misi3"
                  android:textColor="@color/black"
                  android:textSize="14sp" />
          </LinearLayout>


      </LinearLayout>

     <TextView
        android:id="@+id/nilai"
        android:paddingVertical="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_misi"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/nilai"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:background="@color/toolbar_color"/>

        <LinearLayout
            android:id="@+id/txt_nilai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="14dp"
            android:orientation="vertical"
            android:layout_below="@id/nilai">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nilai1"
                android:textColor="@color/toolbar_color"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nilai1"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_light"
                android:textSize="14sp"
                android:justificationMode="inter_word"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/nilai2"
                android:textColor="@color/toolbar_color"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nilai2"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_light"
                android:textSize="14sp"
                android:justificationMode="inter_word"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/nilai3"
                android:textColor="@color/toolbar_color"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nilai3"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_light"
                android:textSize="14sp"
                android:justificationMode="inter_word"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/nilai4"
                android:textColor="@color/toolbar_color"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nilai4"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_light"
                android:textSize="14sp"
                android:justificationMode="inter_word"/>

        </LinearLayout>

        <TextView
            android:id="@+id/logo"
            android:paddingVertical="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_nilai"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/logo"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:background="@color/toolbar_color"/>

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="14dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/logo"
            android:src="@drawable/logo_lrt"
            android:scaleType="fitXY"
            android:contentDescription="@string/app_name"/>

        <LinearLayout
            android:id="@+id/txt_filosofi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgLogo"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="12dp"
                    android:fontFamily="@font/poppins_light"
                    android:justificationMode="inter_word"
                    android:text="@string/nomor1"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/poppins_light"
                    android:justificationMode="inter_word"
                    android:text="@string/filosofi1"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="12dp"
                    android:fontFamily="@font/poppins_light"
                    android:justificationMode="inter_word"
                    android:text="@string/nomor2"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/poppins_light"
                    android:justificationMode="inter_word"
                    android:text="@string/filosofi2"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="12dp"
                    android:fontFamily="@font/poppins_light"
                    android:justificationMode="inter_word"
                    android:text="@string/nomor3"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/poppins_light"
                    android:justificationMode="inter_word"
                    android:text="@string/filosofi3"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</ScrollView>