<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="32dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HubungiFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:text="@string/bantuan"
        android:textAlignment="center"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/contact_us"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_facebook"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:paddingVertical="8dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="16dp"
        android:backgroundTint="@color/toolbar_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_fb"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="40dp"
                android:gravity="center_vertical"
                android:fontFamily="@font/poppins_medium"
                android:textSize="24sp"
                android:text="@string/facebook"
                android:textColor="@color/white"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_twitter"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:paddingVertical="8dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="16dp"
        android:backgroundTint="@color/toolbar_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_twitter"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="40dp"
                android:gravity="center_vertical"
                android:fontFamily="@font/poppins_medium"
                android:textSize="24sp"
                android:text="@string/twitter"
                android:textColor="@color/white"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_instagram"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:paddingVertical="8dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="16dp"
        android:backgroundTint="@color/toolbar_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_ig"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="40dp"
                android:gravity="center_vertical"
                android:fontFamily="@font/poppins_medium"
                android:textSize="24sp"
                android:text="@string/instagram"
                android:textColor="@color/white"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_telepon"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:paddingVertical="8dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="16dp"
        android:backgroundTint="@color/toolbar_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_telepon"
                />

            <TextView
                android:layout_width="166dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="40dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_vertical"
                android:text="@string/telepon"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>




</LinearLayout>